--- a/TrGEMG4/CMakeLists.txt
+++ b/TrGEMG4/CMakeLists.txt
@@ -24,7 +24,7 @@ include(${Geant4_USE_FILE})
 #----------------------------------------------------------------------------
 # Setup ROOT include directories and compile definitions
 #
-find_package(ROOT REQUIRED)
+#find_package(ROOT REQUIRED)
 include(${ROOT_USE_FILE})
                     
 #----------------------------------------------------------------------------
@@ -32,7 +32,8 @@ include(${ROOT_USE_FILE})
 #
 include_directories(${PROJECT_SOURCE_DIR}/include 
                     ${Geant4_INCLUDE_DIR}
-                    ${ROOT_INCLUDE_DIR})
+                    #${ROOT_INCLUDE_DIR}
+                    )
                     #/usr/include)
 file(GLOB sources ${PROJECT_SOURCE_DIR}/src/*.cc)
 file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.h*)
@@ -41,7 +42,7 @@ file(GLOB headers ${PROJECT_SOURCE_DIR}/include/*.h*)
 # Add the executable, and link it to the Geant4 libraries
 #
 add_executable(TrGEMG4 TrGEMG4.cc ${sources} ${headers})
-target_link_libraries(TrGEMG4 ${Geant4_LIBRARIES} ${ROOT_LIBRARIES})
+target_link_libraries(TrGEMG4 ${Geant4_LIBRARIES}) #${ROOT_LIBRARIES})
 
 #----------------------------------------------------------------------------
 # Copy all scripts to the build directory, i.e. the directory in which we
